package iterator.ItemCE1;

public abstract class Aggregate {
    public abstract MyIterator createIterator();
}
